// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mounts and unmounts title 1`] = `
Array [
  <portal-head>
    <title>
      Static
    </title>
  </portal-head>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
]
`;

exports[`mounts and unmounts title 2`] = `
Array [
  <portal-head>
    <title>
      Dynamic
    </title>
  </portal-head>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
]
`;

exports[`mounts and unmounts title 3`] = `
Array [
  <portal-head>
    <title>
      Static
    </title>
  </portal-head>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
]
`;

exports[`renders into document.head portal 1`] = `
<div>
  Yes render
  <portal-head>
    <title>
      Test title
    </title>
  </portal-head>
  <portal-head>
    <style>
      body {}
    </style>
  </portal-head>
  <portal-head>
    <link
      href="index.css"
    />
  </portal-head>
  <portal-head>
    <meta
      charSet="utf-8"
    />
  </portal-head>
</div>
`;

exports[`renders only last meta with the same property 1`] = `
Array [
  <portal-head>
    <meta
      property="name1"
    >
      Meta 2
    </meta>
  </portal-head>,
  <portal-head>
    <meta
      name="name2"
    >
      Meta 4
    </meta>
  </portal-head>,
  <portal-head>
    <meta
      property="name3"
    >
      Meta 6
    </meta>
  </portal-head>,
]
`;

exports[`renders only the last meta with the same name 1`] = `
Array [
  <portal-head>
    <meta>
      Static 1
    </meta>
  </portal-head>,
  <portal-head>
    <meta
      name="name1"
    >
      Static 2
    </meta>
  </portal-head>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
]
`;

exports[`renders only the last meta with the same name 2`] = `
Array [
  <portal-head>
    <meta>
      Static 1
    </meta>
  </portal-head>,
  <portal-head>
    <meta
      name="name1"
    >
      Dynamic 1
    </meta>
  </portal-head>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
]
`;

exports[`renders only the last meta with the same name 3`] = `
Array [
  <portal-head>
    <meta
      name="name1"
    >
      Dynamic 1
    </meta>
  </portal-head>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
  <portal-head>
    <meta>
      Dynamic 2
    </meta>
  </portal-head>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
]
`;

exports[`renders only the last meta with the same name 4`] = `
Array [
  <portal-head>
    <meta>
      Static 1
    </meta>
  </portal-head>,
  <portal-head>
    <meta
      name="name1"
    >
      Dynamic 1
    </meta>
  </portal-head>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
]
`;

exports[`renders only the last meta with the same name 5`] = `
Array [
  <portal-head>
    <meta>
      Static 1
    </meta>
  </portal-head>,
  <portal-head>
    <meta
      name="name1"
    >
      Static 2
    </meta>
  </portal-head>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
]
`;

exports[`renders only the last title 1`] = `
Array [
  <div />,
  <div />,
  <div>
    <portal-head>
      <title>
        Title 3
      </title>
    </portal-head>
  </div>,
]
`;

exports[`switches between titles 1`] = `
Array [
  <portal-head>
    <title>
      Static
    </title>
  </portal-head>,
  <button
    onClick={[Function]}
  >
    0
  </button>,
  <button
    onClick={[Function]}
  >
    1
  </button>,
]
`;

exports[`switches between titles 2`] = `
Array [
  <portal-head>
    <title>
      Title 1
    </title>
  </portal-head>,
  <button
    onClick={[Function]}
  >
    0
  </button>,
  <button
    onClick={[Function]}
  >
    1
  </button>,
]
`;

exports[`switches between titles 3`] = `
Array [
  <button
    onClick={[Function]}
  >
    0
  </button>,
  <portal-head>
    <title>
      Title 2
    </title>
  </portal-head>,
  <button
    onClick={[Function]}
  >
    1
  </button>,
]
`;

exports[`switches between titles 4`] = `
Array [
  <portal-head>
    <title>
      Title 1
    </title>
  </portal-head>,
  <button
    onClick={[Function]}
  >
    0
  </button>,
  <button
    onClick={[Function]}
  >
    1
  </button>,
]
`;
